# Logic-calculator

./: .coveragerc  Määrittelydokumentti.md  README.md  pyproject.toml  tasks.py
Documentation/: Execdocument.md  Specdocument.md  Testingdocument.md
Documentation/Viikkoraportit/: Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti5.mdUntitled-1  Viikkoraportti6.md
Dokumentaatio/: Maarittelydokumentti.md
Dokumentaatio/Viikkoraportit/: Viikkoraportti1  Viikkoraportti1.md
Logiikkalaskin/: Shunting_Yard.py
src/: Shunting_Yard.py  cnf.py  create_table.py  dnf.py  dnf.py.py  main.py  shunting_yard.py  truth_table.py
src/tests/: Shunting_Yard_test.py  cnf_test.py  dnf_test.py  shunting_yard_test.py  truth_table_performance.py  truth_table_test.py
